--- a/css/style.css
+++ b/css/style.css
@@ -262,11 +262,14 @@ address {
 
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 72px;
 }
 
 .team-member {
-  width: calc((100% - 72px) / 4);
+  max-width: 264px;
+  margin: 0 auto;
+  /* width: calc((100% - 72px) / 4); */
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -347,13 +350,15 @@ address {
 
 .portfolio-list {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
 }
 
 .portfolio-list-item {
-  width: calc((100% - 48px) / 3);
+  /* width: calc((100% - 48px) / 3); */
+  max-width: 320px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -784,6 +789,21 @@ address {
 .descr-title{
   justify-content: start;
 }
+
+.team-list{
+  row-gap: 64px;
+  column-gap: 24px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.team-member{
+  width: calc((100% - 24px) / 2);
+  margin: 0;
+}
+
+
 }
 
 @media  screen and (min-width: 1158px){
@@ -795,4 +815,9 @@ address {
 .descr-list-item{
     width: calc((100% - 72px) / 4);
   }
+
+  .team-member{
+  width: calc((100% - 72px) / 4);
+
+}
 }
