--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,37 @@ img {
 }
 
 .header {
+  padding: 16px;
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.menu{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.menu-btn{
+  display: block;
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  color: #ffffff;
+  margin-bottom: 88px;
 }
 
 .nav {
@@ -150,7 +178,7 @@ address {
 }
 
 .preview {
-  padding: 188px 0;
+  padding: 72px 16px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -165,7 +193,7 @@ address {
 
 .preview-text {
   max-width: 496px;
-  font-size: 56px;
+  font-size: 36px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #ffffff;
@@ -767,6 +795,14 @@ address {
   .icon{
     display: none;
   }
+
+  .navigation-item{
+    display: none;
+  }
+
+  .address{
+    display: none;
+  }
 }
 
 @media  screen and (min-width: 768px){
@@ -803,6 +839,25 @@ address {
   margin: 0;
 }
 
+.preview{
+  padding: 112px 136px;
+}
+
+.preview-text{
+  font-size: 56px;
+}
+
+.menu-btn{
+  display: none;
+}
+
+.navigation-item{
+  display: block;
+}
+
+.address{
+  display: block;
+}
 
 }
 
