--- a/css/style.css
+++ b/css/style.css
@@ -55,76 +55,86 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.menu{display: none;
-      flex-direction: column;
-    
-    justify-content: space-between;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: #ffffff;
-    top: 0;
-    left: 0;
-    padding-top: 72px;
-    padding-left: 16px;
-    padding-bottom: 40px;
+.menu {
+  display: none;
+  flex-direction: column;
+
+  justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  top: 0;
+  left: 0;
+  padding-top: 72px;
+  padding-left: 16px;
+  padding-bottom: 40px;
 }
 
-.menu-close-btn{
+.menu-close-btn {
   position: absolute;
-  top: 0;
+  top: 24px;
+  right: 24px;
   left: auto;
   display: block;
   margin-left: auto;
   background-color: transparent;
   border: none;
   color: #ffffff;
+  border: 1px solid #E7E9FC;
+  border-radius: 50%;
 }
 
-.mb-menu-links{
-  color: #2E2F42;
+.mb-menu-links {
+  color: #2e2f42;
   font-family: Roboto;
-font-size: 36px;
-font-style: normal;
-font-weight: 700;
-line-height: 1.11; /* 111.111% */
-letter-spacing: 0.02em;
-text-transform: capitalize;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.11; /* 111.111% */
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 
-.active{
-  color: #404BBF;
+.active {
+  color: #404bbf;
 }
 
-.mob-nav{
-      display: flex;
-    flex-direction: column;
-    gap: 40px;
+.mob-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
-.mob-contact{
-     display: flex;
-    flex-direction: column;
-    gap: 24px;
+.mob-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-bottom: 48px;
 }
 
-.contact-mb{
-   color:  #434455;
-font-family: Roboto;
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: 1.2; /* 120% */
-letter-spacing: 0.02em;
+.contact-mb {
+  color: #434455;
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2; /* 120% */
+  letter-spacing: 0.02em;
 }
 
-.phone{
-  color: #4D5AE5;
+.phone {
+  color: #4d5ae5;
 }
 
-.mob-soc-links-item{
-   width: 100%;
-  height: 100%;
+.mob-soc-links {
+  display: flex;
+  gap: 25px;
+}
+
+.mob-soc-links-item {
+  width: 40px;
+  height: 40px;
   background-color: #4d5ae5;
   border-radius: 50%;
   display: flex;
@@ -132,7 +142,13 @@ letter-spacing: 0.02em;
   justify-content: center;
 }
 
-.mb-link-image{
+.mob-menu-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mb-link-image {
   fill: #e7e9fc;
 }
 
@@ -198,6 +214,7 @@ address {
 }
 
 .contact {
+  font-size: 12px;
   color: #434455;
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -282,7 +299,7 @@ address {
 }
 
 .description {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .icon {
@@ -308,8 +325,7 @@ address {
 }
 
 .descr-title {
-  display: flex;
-  justify-content: center;
+  text-align: center;
   margin: 0 auto;
   font-weight: 700;
   font-size: 36px;
@@ -321,6 +337,7 @@ address {
 
 .descr {
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   background-color: #ffffff;
@@ -328,7 +345,7 @@ address {
 
 .team {
   background-color: #f4f4fd;
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .team-title {
@@ -417,7 +434,7 @@ address {
 }
 
 .portfolio {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .portfolio-title {
@@ -507,9 +524,9 @@ address {
 }
 
 .footer-p-container {
-display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer-logo {
@@ -544,7 +561,7 @@ display: flex;
   margin-bottom: 16px;
 }
 
-.soc-links-footer{
+.soc-links-footer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -580,20 +597,23 @@ display: flex;
   fill: #f4f4fd;
 }
 
-.backdrop { display: none;
+.backdrop {
+  display: none;
   position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   top: 0;
   left: 0;
-   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .modal {
-  width: 408px;
+  width: 288px;
+  margin-bottom: 8px;
   min-height: 584px;
   background-color: #fcfcfc;
   border-radius: 4px;
@@ -602,7 +622,8 @@ display: flex;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 72px 24px 24px 24px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); 
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -630,7 +651,7 @@ display: flex;
 .modal-btn:focus {
   background-color: #404bbf;
   border: none;
-  fill: #ffffff
+  fill: #ffffff;
 }
 
 .modal-btn-icon {
@@ -676,7 +697,7 @@ display: flex;
 
 .modal-input:focus {
   border-color: #4d5ae5;
-  fill: #4D5AE5
+  fill: #4d5ae5;
 }
 
 .modal-comment {
@@ -729,7 +750,7 @@ display: flex;
   letter-spacing: 0.04em;
 }
 
-.privacy-link{
+.privacy-link {
   color: #4d5ae5;
 }
 
@@ -748,18 +769,17 @@ display: flex;
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-
-.modal-btn-icon:hover{
-  fill: #4D5AE5;
+.modal-btn-icon:hover {
+  fill: #4d5ae5;
 }
 
-.modal-btn:hover, .modal-btn:focus >.modal-btn-icon{
+.modal-btn:hover,
+.modal-btn:focus > .modal-btn-icon {
   fill: #ffffff;
 }
 
-.modal-input:focus-within + .modal-input-icon{
-  fill: #4D5AE5;
+.modal-input:focus-within + .modal-input-icon {
+  fill: #4d5ae5;
 }
 
 .check-input:checked + .check-text > .modal-field-span {
@@ -782,9 +802,9 @@ display: flex;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
-   line-height: 1.5;
-   letter-spacing: 0.04em;
-   cursor: pointer;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
   border-radius: 4px;
   background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -795,9 +815,7 @@ display: flex;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-
-.footer-form-title{
+.footer-form-title {
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
@@ -806,17 +824,16 @@ display: flex;
   color: #ffffff;
 }
 
-.footer-form-div{
+.footer-form-div {
   flex-direction: column;
-    display: flex;
-align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.footer-form{
-
+.footer-form {
 }
 
-.footer-form-input{
+.footer-form-input {
   width: 264px;
   height: 40px;
   border: 1px solid #ffffff;
@@ -828,14 +845,14 @@ align-items: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   color: #ffffff;
-margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 
-.footer-form::placeholder{
+.footer-form::placeholder {
   color: #ffffff;
 }
 
-.footer-form-btn{
+.footer-form-btn {
   margin: 0 auto;
   min-width: 165px;
   height: 40px;
@@ -849,131 +866,180 @@ margin-bottom: 24px;
   letter-spacing: 0.04em;
   color: #ffffff;
   cursor: pointer;
-  background-color: #4D5AE5;
+  background-color: #4d5ae5;
   border: none;
   border-radius: 4px;
 }
 
-.footer-form-icon{
+.footer-form-icon {
   margin-left: 16px;
 }
 
+.menu-btn{
+  border: none;
+  background-color: transparent;
+}
 
-@media  screen and (min-width: 320px) {
-  .icon{
+@media screen and (min-width: 320px) {
+  .icon {
     display: none;
   }
 
-  .navigation-item{
+  .navigation-item {
     display: none;
   }
 
-  .address{
+  .address {
     display: none;
   }
 }
 
-@media  screen and (min-width: 768px){
-
-  .header{
-    padding: 0 ;
+@media screen and (min-width: 768px) {
+  .header {
+    display: flex;
+    padding: 0;
+    height: 72px;
+    align-items: center;
   }
 
+  .container {
+    max-width: 768px;
+    margin: 0 auto;
+    padding: 0 16px;
+  }
 
-.container {
-  max-width: 768px;
-  margin: 0 auto;
-  padding: 0 16px;
+.logo{
+  margin-right: 120px;
 }
 
-  .descr-list-item{
+  .descr-list-item {
     width: calc((100% - 24px) / 2);
   }
 
   .descr-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-}
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
 
-.descr-title{
-  justify-content: start;
-}
+  .descr-title {
+    display: flex;
+    justify-content: start;
+  }
 
-.team-list{
-  row-gap: 64px;
-  column-gap: 24px;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-}
+  .team-list {
+    row-gap: 64px;
+    column-gap: 24px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
-.team-member{
+  .team-member {
+    width: calc((100% - 24px) / 2);
+    margin: 0;
+  }
+.portfolio-list-item{
   width: calc((100% - 24px) / 2);
-  margin: 0;
+}
+  .preview {
+    padding: 112px 136px;
+  }
+
+  .preview-text {
+    font-size: 56px;
+  }
+
+  .menu-btn {
+    display: none;
+  }
+
+  .navigation-item {
+    display: flex;
+    margin-right: 122px;
+  }
+
+  .address {
+    display: flex;
+    padding: 0;
+  }
+
+  .address-item{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .footer-div {
+    justify-content:flex-start;
+    flex-direction: row;
+    align-items: start;
+    flex-wrap: wrap;
+    max-width: 550px;
+    gap: 72px 24px;
+  }
+
+  .footer-p-container {
+    align-items: start;
+    width: 264px;
+  }
+
+  .soc-links-footer {
+    width: 208px;
+  }
+
+  .footer-form-div {
+    width: 453px;
+    align-items: start;
+  }
+
+  .footer-form {
+    display: flex;
+    gap: 24px;
+  }
+
+  .modal{
+    width: 408px;
+  }
 }
 
-.preview{
-  padding: 112px 136px;
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    margin: 0 auto;
+  }
+
+  .address-item{
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .icon{
+    display: flex;
+  }
+
+.description{
+  padding: 120px 0;
 }
 
-.preview-text{
-  font-size: 56px;
+.descr{
+  font-weight: 400;
 }
 
-.menu-btn{
-  display: none;
-}
-
-.navigation-item{
-  display: flex;
-}
-
-.address{
-  display: flex;
-  padding: 0;
-}
-
-.footer-div{
-  justify-content: center;
-  flex-direction: row;
-  align-items: start;
-  flex-wrap: wrap;
-}
-
-.footer-p-container{
-  align-items: start;
-  width: 264px;
-}
-
-.soc-links-footer{
-  width: 208px;
-}
-
-.footer-form-div{
-  width: 453px;
-  align-items: start;
-}
-
-.footer-form{
-  display: flex;
-  gap: 24px;
-}
-
-}
-
-@media  screen and (min-width: 1158px){
-.container {
-  max-width: 1158px;
-  margin: 0 auto;
-}
-
-.descr-list-item{
+  .descr-list-item {
     width: calc((100% - 72px) / 4);
   }
 
-  .team-member{
-  width: calc((100% - 72px) / 4);
+ .team{
+  padding: 120px 0; 
+ }
+  
+  .team-member {
+    width: calc((100% - 72px) / 4);
+  }
 
-}
+  .portfolio{
+    padding: 120px 0;
+  }
+
 }
