--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,7 @@ img {
 .navigation {
   display: flex;
   align-items: center;
+
 }
 
 .navigation-link {
@@ -229,7 +230,7 @@ address {
 }
 
 .logo {
-  margin-right: 76px;
+  margin-right: 149px;
   font-family: "Raleway", sans-serif;
   line-height: 1.17;
   letter-spacing: 0.03em;
@@ -254,7 +255,7 @@ address {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/background.jpg);
+    url(../images/background-mb.jpg);
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
@@ -458,7 +459,6 @@ address {
 .portfolio-list-item {
   /* width: calc((100% - 48px) / 3); */
   overflow: hidden;
-  max-width: 320px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -598,7 +598,7 @@ address {
 }
 
 .backdrop {
-  display: none;
+  /* display: none; */
   position: fixed;
   width: 100%;
   height: 100%;
@@ -621,7 +621,7 @@ address {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 72px 24px 24px 24px;
+  padding: 72px 16px 16px 16px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -743,7 +743,8 @@ address {
 }
 
 .check-text {
-  display: block;
+  display: flex;
+  align-items: center;
   color: #8e8f99;
   font-size: 12px;
   line-height: 1.17;
@@ -762,7 +763,7 @@ address {
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  margin-right: 12px;
+  margin-right: 8px;
   fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -943,6 +944,11 @@ address {
     width: calc((100% - 24px) / 2);
   }
   .preview {
+    background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/background-lp.jpg);
     padding: 112px 136px;
   }
 
@@ -956,10 +962,15 @@ address {
 
   .navigation-item {
     display: flex;
-    margin-right: 122px;
+    
+  }
+
+ .nav{
+    width: 768px;
   }
 
   .address {
+    margin-left: auto;
     display: flex;
     padding: 0;
   }
@@ -993,6 +1004,10 @@ address {
     align-items: start;
   }
 
+  .footer-form-input{
+    margin-bottom: 0;
+  }
+
   .footer-form {
     display: flex;
     gap: 24px;
@@ -1008,11 +1023,36 @@ address {
     max-width: 1158px;
     margin: 0 auto;
   }
+  
+  .nav{
+    width: 1158px;
+  }
+
+  .address{
+    margin-left: auto;
+  }
+
+  .logo{
+    margin-right: 76px;
+  }
 
   .address-item {
     flex-direction: row;
     gap: 40px;
   }
+
+.contact{
+  font-size: 16px;
+}
+
+.preview{
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/background.jpg);
+  padding: 188px 0;
+}
 
   .icon {
     display: flex;
@@ -1041,14 +1081,52 @@ address {
   .portfolio {
     padding: 120px 0;
   }
+
+  .portfolio-list-item{
+    width: calc((100% - 48px) / 3);
+  }
+
+  .footer-div{
+    justify-content: space-around;
+  }
+  .footer-form-input{
+    margin-bottom: 0;
+  }
+
+  .descr-title{
+    font-weight: 500;
+    font-size: 20px;
+  }
 }
 
 @media (min-resolution: 192dpi) {
+ @media screen and (min-width: 320px){
+  .preview {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/background-mb@2x.jpg);
+ }
+}
+
+ @media screen and (min-width: 768px){
+  .preview {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/background-lp@2x.jpg);
+ }
+}
+
+ @media screen and (min-width: 1158px){
   .preview {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
       url(../images/background@2x.jpg);
-  }
+ }
+ }
 }
